--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -10,7 +10,9 @@ jobs:
   build:
     runs-on: windows-latest
     steps:
+      - name: Create py310 environment
+        run: conda create --name py310 python=3.10
       - name: Setup Miniconda
         uses: conda-incubator/setup-miniconda@v2.2.0
-      - name: Install dependencies
-        run: conda install fake-bpy
+        with:
+          activate-environment: py310
