--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -10,9 +10,12 @@ jobs:
   build:
     runs-on: windows-latest
     steps:
-      - name: Create py310 environment
-        run: conda create --name py310 python=3.10
-      - name: Setup Miniconda
+      - name: Setup Conda
         uses: conda-incubator/setup-miniconda@v2.2.0
         with:
           activate-environment: py310
+          environment-file: etc/py310.yml
+          auto-activate-base: false
+      - run: |
+        conda info
+        conda list
