--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -11,7 +11,7 @@ jobs:
     defaults:
       run:
         shell: bash -l {0}
-    runs-on: windows-latest
+    runs-on: windows-2022
     steps:
       # - name: Use Cache
       #   uses: actions/cache@v3
@@ -19,10 +19,11 @@ jobs:
         uses: lukka/get-cmake@v3.24.2
       
       - name: Install CUDA Toolkit
-        uses: Jimver/cuda-toolkit@v0.2.8
-        id: cuda-toolkit
-        with:
-          cuda: '12.0'
+        env:
+          cuda: '12.0.0'
+          visual_studio: 'Visual Studio 17 2022'
+        shell: powershell
+        run: .\scripts\actions\install_cuda_windows.ps1
 
       - name: Checkout Repo
         uses: actions/checkout@v2
