--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -13,8 +13,9 @@ jobs:
         shell: bash -l {0}
     runs-on: windows-2022
     steps:
-      # - name: Use Cache
-      #   uses: actions/cache@v3
+      - name: Checkout Repo
+        uses: actions/checkout@v2
+      
       - name: Install CMake
         uses: lukka/get-cmake@v3.24.2
       
@@ -23,11 +24,8 @@ jobs:
           cuda: '12.0.0'
           visual_studio: 'Visual Studio 17 2022'
         shell: powershell
-        run: .\scripts\actions\install_cuda_windows.ps1
+        run: '${{ github.workspace }}\scripts\actions\install_cuda_windows.ps1'
 
-      - name: Checkout Repo
-        uses: actions/checkout@v2
-      
       - name: Setup Conda
         uses: conda-incubator/setup-miniconda@v2.2.0
         with:
