--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -26,6 +26,7 @@ jobs:
         id: cuda-toolkit
         with:
           cuda: '12.1.0'
+          method: 'network'
 
       - name: Setup Conda
         uses: conda-incubator/setup-miniconda@v2.2.0
