different way of activating fallback GPU archs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,19 +16,24 @@ set(CMAKE_CUDA_STANDARD 17)
 set(CMAKE_CUDA_STANDARD_REQUIRED ON)
 
 # CUDA
-# if this is a local Debug build, automatically determine the CUDA architecture based on the installed GPUs
-if(DEFINED ENV{GITHUB_ACTIONS})
-	message(STATUS "Building for GitHub Actions")
-	SET(SUPPORTED_CUDA_ARCHITECTURES "75;80;86;87;89;90;90a")
-	SET(CMAKE_CUDA_ARCHITECTURES ${SUPPORTED_CUDA_ARCHITECTURES} CACHE STRING "CUDA architectures" FORCE)
-else()
-	include(FindCUDA/select_compute_arch)
-	CUDA_DETECT_INSTALLED_GPUS(INSTALLED_GPU_CCS_1)
-	string(STRIP "${INSTALLED_GPU_CCS_1}" INSTALLED_GPU_CCS_2)
-	string(REPLACE " " ";" INSTALLED_GPU_CCS_3 "${INSTALLED_GPU_CCS_2}")
-	string(REPLACE "." "" CUDA_ARCH_LIST "${INSTALLED_GPU_CCS_3}")
-	SET(CMAKE_CUDA_ARCHITECTURES ${CUDA_ARCH_LIST})
+
+
+include(FindCUDA/select_compute_arch)
+CUDA_DETECT_INSTALLED_GPUS(INSTALLED_GPU_CCS_1)
+string(STRIP "${INSTALLED_GPU_CCS_1}" INSTALLED_GPU_CCS_2)
+string(REPLACE " " ";" INSTALLED_GPU_CCS_3 "${INSTALLED_GPU_CCS_2}")
+string(REPLACE "." "" CUDA_ARCH_LIST "${INSTALLED_GPU_CCS_3}")
+SET(CMAKE_CUDA_ARCHITECTURES ${CUDA_ARCH_LIST})
+message(STATUS "Building for local machine with CUDA architectures: ${CMAKE_CUDA_ARCHITECTURES}")
+
+# if the CMAKE_CUDA_ARCHITECTURES is empty
+if(NOT CMAKE_CUDA_ARCHITECTURES)
+	SET(FALLBACK_CUDA_ARCHITECTURES "75;80;86;87;89;90;90a")
+	message(STATUS "CMAKE_CUDA_ARCHITECTURES is empty, using fallback architectures: ${FALLBACK_CUDA_ARCHITECTURES}")
+	SET(CMAKE_CUDA_ARCHITECTURES ${FALLBACK_CUDA_ARCHITECTURES})
 endif()
+
+SET(TCNN_CUDA_ARCHITECTURES ${CMAKE_CUDA_ARCHITECTURES})
 
 find_package(CUDA 12.0 REQUIRED)
 include_directories(${CUDA_INCLUDE_DIRS})
