use CUDA_GPU_DETECT_OUTPUT?

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,14 +23,15 @@ CUDA_DETECT_INSTALLED_GPUS(INSTALLED_GPU_CCS_1)
 string(STRIP "${INSTALLED_GPU_CCS_1}" INSTALLED_GPU_CCS_2)
 string(REPLACE " " ";" INSTALLED_GPU_CCS_3 "${INSTALLED_GPU_CCS_2}")
 string(REPLACE "." "" CUDA_ARCH_LIST "${INSTALLED_GPU_CCS_3}")
-SET(CMAKE_CUDA_ARCHITECTURES ${CUDA_ARCH_LIST})
-message(STATUS "Building for local machine with CUDA architectures: ${CMAKE_CUDA_ARCHITECTURES}")
 
-# if the CMAKE_CUDA_ARCHITECTURES is empty
-if(NOT CMAKE_CUDA_ARCHITECTURES)
+# if no GPU is installed, CUDA_GPU_DETECT_OUTPUT will be empty (from FindCUDA/select_compute_arch.cmake)
+if(NOT CUDA_GPU_DETECT_OUTPUT)
 	SET(FALLBACK_CUDA_ARCHITECTURES "75;80;86;87;89;90;90a")
-	message(STATUS "CMAKE_CUDA_ARCHITECTURES is empty, using fallback architectures: ${FALLBACK_CUDA_ARCHITECTURES}")
+	message(STATUS "No GPU installed. Using fallback architectures: ${FALLBACK_CUDA_ARCHITECTURES}")
 	SET(CMAKE_CUDA_ARCHITECTURES ${FALLBACK_CUDA_ARCHITECTURES})
+else()
+	SET(CMAKE_CUDA_ARCHITECTURES ${CUDA_ARCH_LIST})
+	message(STATUS "Building for local machine with CUDA architectures: ${CMAKE_CUDA_ARCHITECTURES}")
 endif()
 
 SET(TCNN_CUDA_ARCHITECTURES ${CMAKE_CUDA_ARCHITECTURES})
