--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,22 +16,17 @@ set(CMAKE_CUDA_STANDARD 17)
 set(CMAKE_CUDA_STANDARD_REQUIRED ON)
 
 # CUDA
-
-
-include(FindCUDA/select_compute_arch)
-CUDA_DETECT_INSTALLED_GPUS(INSTALLED_GPU_CCS_1)
-string(STRIP "${INSTALLED_GPU_CCS_1}" INSTALLED_GPU_CCS_2)
-string(REPLACE " " ";" INSTALLED_GPU_CCS_3 "${INSTALLED_GPU_CCS_2}")
-string(REPLACE "." "" CUDA_ARCH_LIST "${INSTALLED_GPU_CCS_3}")
-
-# if no GPU is installed, CUDA_GPU_DETECT_OUTPUT will be empty (from FindCUDA/select_compute_arch.cmake)
-if(NOT CUDA_GPU_DETECT_OUTPUT)
-	SET(FALLBACK_CUDA_ARCHITECTURES "75;80;86;87;89;90;90a")
-	message(STATUS "No GPU installed. Using fallback architectures: ${FALLBACK_CUDA_ARCHITECTURES}")
-	SET(CMAKE_CUDA_ARCHITECTURES ${FALLBACK_CUDA_ARCHITECTURES})
+if ($ENV{CUDA_ARCH_LIST})
+	message(STATUS "Building for remote machine with CUDA architectures: $ENV{CUDA_ARCH_LIST}")
+	SET(CMAKE_CUDA_ARCHITECTURES $ENV{CUDA_ARCH_LIST})
 else()
-	SET(CMAKE_CUDA_ARCHITECTURES ${CUDA_ARCH_LIST})
-	message(STATUS "Building for local machine with CUDA architectures: ${CMAKE_CUDA_ARCHITECTURES}")
+	include(FindCUDA/select_compute_arch)
+	CUDA_DETECT_INSTALLED_GPUS(INSTALLED_GPU_CCS_1)
+	string(STRIP "${INSTALLED_GPU_CCS_1}" INSTALLED_GPU_CCS_2)
+	string(REPLACE " " ";" INSTALLED_GPU_CCS_3 "${INSTALLED_GPU_CCS_2}")
+	string(REPLACE "." "" CUDA_ARCH_LIST "${INSTALLED_GPU_CCS_3}")
+	message(STATUS "Detected CUDA architectures: ${CUDA_ARCH_LIST}")
+	set(CMAKE_CUDA_ARCHITECTURES ${CUDA_ARCH_LIST})
 endif()
 
 SET(TCNN_CUDA_ARCHITECTURES ${CMAKE_CUDA_ARCHITECTURES})
