--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ set(CMAKE_CUDA_STANDARD 17)
 set(CMAKE_CUDA_STANDARD_REQUIRED ON)
 
 # CUDA
-if ($ENV{CUDA_ARCH_LIST})
+if(DEFINED ENV{CUDA_ARCH_LIST})
 	message(STATUS "Building for remote machine with CUDA architectures: $ENV{CUDA_ARCH_LIST}")
 	SET(CMAKE_CUDA_ARCHITECTURES $ENV{CUDA_ARCH_LIST})
 else()
