--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ set(CMAKE_CUDA_STANDARD_REQUIRED ON)
 # CUDA
 if(DEFINED ENV{CUDA_ARCH_LIST})
 	message(STATUS "Building for remote machine with CUDA architectures: $ENV{CUDA_ARCH_LIST}")
-	SET(CMAKE_CUDA_ARCHITECTURES $ENV{CUDA_ARCH_LIST})
+	set(CMAKE_CUDA_ARCHITECTURES $ENV{CUDA_ARCH_LIST})
 else()
 	include(FindCUDA/select_compute_arch)
 	CUDA_DETECT_INSTALLED_GPUS(INSTALLED_GPU_CCS_1)
@@ -29,7 +29,7 @@ else()
 	set(CMAKE_CUDA_ARCHITECTURES ${CUDA_ARCH_LIST})
 endif()
 
-SET(TCNN_CUDA_ARCHITECTURES ${CMAKE_CUDA_ARCHITECTURES})
+set(TCNN_CUDA_ARCHITECTURES ${CMAKE_CUDA_ARCHITECTURES})
 
 find_package(CUDA 12.0 REQUIRED)
 include_directories(${CUDA_INCLUDE_DIRS})
