no redundant TCNN_CUDA_ARCHITECTURES

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ set(CMAKE_CUDA_STANDARD_REQUIRED ON)
 # CUDA
 if(DEFINED ENV{CUDA_ARCH_LIST})
 	message(STATUS "Building for remote machine with CUDA architectures: $ENV{CUDA_ARCH_LIST}")
-	set(CMAKE_CUDA_ARCHITECTURES $ENV{CUDA_ARCH_LIST})
+	set(CMAKE_CUDA_ARCHITECTURES "$ENV{CUDA_ARCH_LIST}")
 else()
 	include(FindCUDA/select_compute_arch)
 	CUDA_DETECT_INSTALLED_GPUS(INSTALLED_GPU_CCS_1)
@@ -26,7 +26,7 @@ else()
 	string(REPLACE " " ";" INSTALLED_GPU_CCS_3 "${INSTALLED_GPU_CCS_2}")
 	string(REPLACE "." "" CUDA_ARCH_LIST "${INSTALLED_GPU_CCS_3}")
 	message(STATUS "Detected CUDA architectures: ${CUDA_ARCH_LIST}")
-	set(CMAKE_CUDA_ARCHITECTURES ${CUDA_ARCH_LIST})
+	set(CMAKE_CUDA_ARCHITECTURES "${CUDA_ARCH_LIST}")
 endif()
 
 set(TCNN_CUDA_ARCHITECTURES ${CMAKE_CUDA_ARCHITECTURES})
