better step names

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -37,7 +37,7 @@ jobs:
           environment-file: etc/py310.yml
           auto-activate-base: false
       
-      - name: Configure CMake
+      - name: CMake Configure
         shell: bash
         env:
           # CUDA_ARCH_LIST: 75;80;86;87;89;90;90a
@@ -50,7 +50,7 @@ jobs:
             -DCMAKE_BUILD_TYPE=Release \
             -DPYTHON_EXECUTABLE=${CONDA_PREFIX}/python.exe
 
-      - name: Build
+      - name: CMake Build
         run: cmake --build build --config Release -j
 
       - name: Upload Artifact
