maybe we don't need frontslash line escapes?

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -29,14 +29,14 @@ jobs:
           cuda: '12.1.0'
           method: 'network'
           # https://docs.nvidia.com/cuda/cuda-installation-guide-microsoft-windows/
-          sub-packages: '[ \
-            "cublas", \
-            "cudart", \
-            "curand", \
-            "nvcc", \
-            "nvrtc", \
-            "thrust", \
-            "visual_studio_integration" \
+          sub-packages: '[
+            "cublas",
+            "cudart",
+            "curand",
+            "nvcc",
+            "nvrtc",
+            "thrust",
+            "visual_studio_integration"
           ]'
 
       - name: Setup Conda
