--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -46,6 +46,7 @@ jobs:
           auto-activate-base: false
       
       - name: wtf
+        shell: bash
         run: |
           echo ${CONDA_PREFIX}/python.exe
           ${CONDA_PREFIX}/python.exe --version
@@ -60,9 +61,9 @@ jobs:
       #     cmake . \
       #       -B build \
       #       -G "Visual Studio 17 2022" \
-      #       -A x64 \
+      #       -A x64
       #       -DCMAKE_BUILD_TYPE=Release \
-      #       -DPYTHON_EXECUTABLE=${CONDA_PREFIX}/python.exe
+      #       -DPYTHON_EXECUTABLE="${CONDA_PREFIX}\\python.exe"
 
       # - name: CMake Build
       #   run: cmake --build build --config Release -j
