add options for building pylib or exe or both!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,8 @@ cmake_policy(SET CMP0077 NEW)
 
 project (NeRFRenderCore LANGUAGES CUDA CXX)
 
+set(PYLIB_NAME PyTurboNeRF)
+
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CUDA_STANDARD 17)
@@ -15,6 +17,20 @@ set(CMAKE_CUDA_STANDARD_REQUIRED ON)
 
 # options
 option(TN_BUILD_EXE "Build executable" ON)
+option(TN_BUILD_PYD "Build Python module" OFF)
+
+# we need at least one target to build
+# if TN_BUILD_EXE is ON
+if(TN_BUILD_EXE)
+	set(BUILD_TARGET ${PROJECT_NAME})
+elseif (TN_BUILD_PYD)
+	set(BUILD_TARGET ${PYLIB_NAME})
+endif()
+
+if(NOT DEFINED BUILD_TARGET)
+	message(STATUS "TN_BUILD_EXE is OFF and TN_BUILD_PYD is OFF. Nothing to build!")
+	return()
+endif()
 
 # CUDA
 if(DEFINED ENV{CUDA_ARCH_LIST})
@@ -42,7 +58,6 @@ include_directories(${OPENGL_INCLUDE_DIR})
 # GLAD
 add_subdirectory(includes/glad)
 include_directories(includes/glad/include)
-
 
 # tiny-cuda-nn
 set(TCNN_BUILD_EXAMPLES OFF)
@@ -161,41 +176,6 @@ set(SOURCES
 	src/main.cu	
 )
 
-# project executable
-
-# build exe if TN_BUILD_EXE is set to ON
-if(TN_BUILD_EXE)
-	add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS})
-endif()
-
-# pybind11
-add_subdirectory(includes/pybind11)
-include_directories(${pybind11_INCLUDE_DIRS})
-
-set(PYBIND_INCLUDES
-	src/api/pybind_cuda.cuh
-	src/api/python_bindings.cu
-
-	src/integrations/blender.cuh
-
-	${SOURCES}
-	${HEADERS}
-)
-
-pybind11_add_module(PyTurboNeRF ${PYBIND_INCLUDES})
-
-# Set stricter compile flag
-if(NOT MSVC)
-	target_compile_options(${PROJECT_NAME} PRIVATE -Xcompiler -Werror)
-endif()
-
-# CUDA includes / linkage
-set_target_properties(${PROJECT_NAME} PROPERTIES
-	CUDA_RESOLVE_DEVICE_SYMBOLS ON
-	CUDA_SEPARABLE_COMPILATION ON
-	INTERPROCEDURAL_OPTIMIZATION TRUE
-)
-
 set(NeRFRenderCore_LIBRARIES
 	PRIVATE
 	${OPENGL_LIBRARIES}
@@ -206,16 +186,58 @@ set(NeRFRenderCore_LIBRARIES
 	tiny-cuda-nn
 )
 
-target_link_libraries(${PROJECT_NAME}
-	PRIVATE
-	${NeRFRenderCore_LIBRARIES}
-)
+# Build Executable
+if(TN_BUILD_EXE)
+	message(STATUS "${PROJECT_NAME} Executable will be built!")
+	add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS})
+	
+	set_target_properties(${PROJECT_NAME} PROPERTIES
+		CUDA_RESOLVE_DEVICE_SYMBOLS ON
+		CUDA_SEPARABLE_COMPILATION ON
+		INTERPROCEDURAL_OPTIMIZATION TRUE
+	)
 
-target_link_libraries(PyTurboNeRF
-	PRIVATE
-	${NeRFRenderCore_LIBRARIES}
-	pybind11::module
-)
+	target_link_libraries(${PROJECT_NAME}
+		PRIVATE
+		${NeRFRenderCore_LIBRARIES}
+	)
+else()
+	message(STATUS "${PROJECT_NAME} Executable will NOT be built!")
+endif()
+
+# Build Python Library
+if (TN_BUILD_PYD)
+	message(STATUS "${PYLIB_NAME} Python Library will be built!")
+	# pybind11
+	add_subdirectory(includes/pybind11)
+	include_directories(${pybind11_INCLUDE_DIRS})
+
+	set(PYBIND_INCLUDES
+		src/api/pybind_cuda.cuh
+		src/api/python_bindings.cu
+
+		src/integrations/blender.cuh
+
+		${SOURCES}
+		${HEADERS}
+	)
+
+	pybind11_add_module(${PYLIB_NAME} ${PYBIND_INCLUDES})
+
+	target_link_libraries(${PYLIB_NAME}
+		PRIVATE
+		${NeRFRenderCore_LIBRARIES}
+		pybind11::module
+	)
+else()
+	message(STATUS "${PYLIB_NAME} Python Library will NOT be built!")
+endif()
+
+# Set stricter compile flag (for Linux)
+if(NOT MSVC)
+	target_compile_options(${PROJECT_NAME} PRIVATE -Xcompiler -Werror)
+endif()
+
 
 
 # Copy DLLs to output directory
@@ -241,10 +263,11 @@ function(copy_cuda_dlls)
 
 	# Copy them to the output directory after building
 	foreach(CUDA_DLL_PATH ${CUDA_DLL_PATHS})
-	add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
-		COMMAND ${CMAKE_COMMAND} -E copy_if_different
-		"${CUDA_DLL_PATH}"
-		$<TARGET_FILE_DIR:${PROJECT_NAME}>)
+		add_custom_command(TARGET ${BUILD_TARGET} POST_BUILD
+			COMMAND ${CMAKE_COMMAND} -E copy_if_different
+			"${CUDA_DLL_PATH}"
+			$<TARGET_FILE_DIR:${BUILD_TARGET}>
+		)
 	endforeach()
 endfunction()
 
