--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -16,21 +16,21 @@ jobs:
       matrix:
         # https://en.wikipedia.org/wiki/CUDA#GPUs_supported
         artifact: [
-          {
-            arch: "75",
-            name: "Turing",
-            gpus: "RTX 2060 - 2080 & Ti, Quadro RTX 4000 - 8000"
-          },
+          # {
+          #   arch: "75",
+          #   name: "Turing",
+          #   gpus: "RTX 2060 - 2080 & Ti, Quadro RTX 4000 - 8000"
+          # },
           {
             arch: "86",
             name: "Ampere",
             gpus: "RTX 3050 - 3090 & Ti, RTX A2000 - A6000"
           },
-          {
-            arch: "89",
-            name: "Lovelace",
-            gpus: "RTX 4070 - 4090, RTX 6000 Ada"
-          }
+          # {
+          #   arch: "89",
+          #   name: "Lovelace",
+          #   gpus: "RTX 4070 - 4090, RTX 6000 Ada"
+          # }
         ]
     steps:
       - name: Checkout Repo
@@ -53,7 +53,7 @@ jobs:
       
       - name: List DLLs
         run: |
-          ls ${CUDA_TOOLKIT_ROOT_DIR}/bin/*.dll
+          ls "C:/Program Files/NVIDIA GPU Computing Toolkit/CUDA/v12.1/bin"
 
       # - name: Setup Conda
       #   uses: conda-incubator/setup-miniconda@v2.2.0
